2009-11-06  Andreas Kupries  <andreask@activestate.com>

	* library/safe.tcl (::safe::Setup): Added documentation of the
	contents of the state array. Also killed the 'InterpState'
	procedure with its upleveled variable/upvar combination, and
	replaced all uses with 'namespace upvar'.

2009-11-05  Andreas Kupries  <andreask@activestate.com>

	* library/safe.tcl: A series of patches which bring the SafeBase
	up to date with code guidelines, Tcl's features, also eliminating
	a number of inefficiencies along the way.
	(1) Changed all procedure names to be fully qualified.
	(2) Moved the procedures out of the namespace eval. Kept their
	locations. IOW, broke the namespace eval apart into small sections
	not covering the procedure definitions.
	(3) Reindented the code. Just lots of whitespace
	changes. Functionality unchanged.
	(4) Moved the multiple namespace eval's around. Command export at
	the top, everything else (var decls, argument parsing setup) at
	the bottom.
	(5) Moved the argument parsing setup into a procedure called when
	the code is loaded. Easier management of temporary data.
	(6) Replaced several uses of 'Set' with calls to the new procedure
	'InterpState' and direct access to the per-slave state array.
	(7) Replaced the remaining uses of 'Set' and others outside of the
	path/token handling, and deleted a number of procedures related to
	state array access which are not used any longer.
	(8) Converted the path token system to cache normalized paths and
	path <-> token conversions. Removed more procedures not used any
	longer. Removed the test cases 4.3 and 4.4 from safe.test. They
	were testing the now deleted command "InterpStateName".
	(9) Changed the log command setup so that logging is compiled out
	completely when disabled (default).
	(10) Misc. cleanup. Inlined IsInterp into CheckInterp, its only
	user. Consistent 'return -code error' for error reporting. Updated
	to use modern features (lassign, in/ni, dicts). The latter are